fdo#81055: Crash due to inadequate checks for GL version / capabilities

Base line is OpenGL 2.1 + extensions:

GL_ARB_framebuffer_object (part of OpenGL 3.0) for
glGenFramebuffers, glGenRenderbuffers...

GL_ARB_vertex_array_object (part of OpenGL 3.0) for
glGenVertexArrays, glBindVertexArray...

GL_ARB_sampler_objects (part of OpenGL 3.3) for
glGenSamplers, glBindSampler...

Change-Id: Ib8acf41ab85cd1677d0341719b3a5b4f743ed756